# ChatTTS

./: .env  .gitignore  DEVELOPMENT.md  QA.md  README.md  app.py  pyproject.toml  requirements.txt  windows.spec
templates/: index.html
uilib/: cfg.py  utils.py
